tests/pass/variable_precedence.jlite
class Main {
    Void main(Int a){
        Void a;
        return a;
    }
}