tests/fail/while_cond_not_bool.jlite
class Main {
    Void main (Int a) {
        while(a) {
            return;
        }
    }
}